fixed stretch on img/font-sizes on larger screens

--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ a {
 
 @media only screen and (min-width: 768px) {
   img {
-    width: 40vw;
+    width: 60vw;
   }
 
   .used {
@@ -133,10 +133,23 @@ a {
   }
 
   img {
-    width: 25vw;
+    /* width: 30vw; */
+    max-width: 700px;
   }
 
   .projects {
     width: 60vw;
+  }
+
+  p {
+    font-size: 32px;
+  }
+
+  i {
+    font-size: 40px;
+  }
+
+  h2,h2 {
+    font-size: 36px;
   }
 }
